# COOL-The-Game

./: Makefile.orig  README.md  YARenderLoop.h  YARenderLoop.m  YAScene.h  YAScene.m  YASceneDevelop.h  YASceneDevelop.m  config.h  config.h.in  config.status  configure  configure.in  hello.m
YAWorld/audio/: YAOpenAL.h  YAOpenAL.m
YAWorld/gfx/: YA3DFileFormat.h  YA3DFileFormat.m  YAAnimator.h  YAAnimator.m  YAAvatar.h  YAAvatar.m  YABasicAnimator.h  YABasicAnimator.m  YABlockAnimator.h  YABlockAnimator.m  YAFogLight.h  YAFogLight.m  YAGouradLight.h  YAGouradLight.m  YAGridModel.h  YAGridModel.m  YAHeightMap.h  YAImpersonator.h  YAImpersonator.m  YAIngredient.h  YAIngredient.m  YAInterpolationAnimator.h  YAInterpolationAnimator.m  YAKinematic.h  YAKinematic.m  YALight.h  YALight.m  YAMaterial.h  YAMaterial.m  YAModel.h  YAModel.m  YAPerspectiveProjectionInfo.h  YAPerspectiveProjectionInfo.m  YAPhongLight.h  YAPhongLight.m  YAPickMap.h  YAPickMap.m  YAShader.h  YAShader.m  YAShadowMap.h  (+21 more)
YAWorld/math/: YAMatrix3f.h  YAMatrix3f.m  YAMatrix4f.h  YAMatrix4f.m  YAProbability.h  YAProbability.m  YAQuaternion.h  YAQuaternion.m  YAVector2f.h  YAVector2f.m  YAVector2i.h  YAVector2i.m  YAVector3f.h  YAVector3f.m  YAVector4f.h  YAVector4f.m
YAWorld/util/: HIDReader.h  HIDReader.m  (+18 more)
autom4te.cache/: output.0  requests  traces.0
bis/: YAAlienRace.h  YAAlienRace.m  YAAuction.h  YAAuction.m  YABonzoidMover.h  YABonzoidMover.m  YABonzoidRace.h  YABonzoidRace.m  YABulletEngineCollisionProtocol.h  YABulletEngineTranslator.h  YABulletEngineTranslator.mm  YAChronograph.h  YAChronograph.m  YAColonyMap.h  YAColonyMap.m  YACommoditiesAuction.h  YACommoditiesAuction.m  YACounterEvent.h  YACounterEvent.m  YADevelopmentAI.h  YADevelopmentAI.m  YADevelopmentController.h  YADevelopmentController.m  YADevelopmentEvent.h  YADevelopmentEvent.m  YADevelopmentPlayer.h  YADromedarMover.h  YADromedarMover.m  YAEagleAssembler.h  YAEagleAssembler.m  YAEagleController.h  YAEagleController.m  YAEagleFlightEvents.h  YAEagleFlightEvents.m  YAFlapperMover.h  YAFlapperMover.m  YAFlapperRace.h  YAFlapperRace.m  YAFortune.h  YAFortune.m  (+89 more)
res/: Localizable.strings
timeline/: YACondition.h  YACondition.m  YAEvaluable.h  YAEvent.h  YAEvent.m  YAEventChain.h  YAEventChain.m  YASituation.h  YASituation.m  YATimerTrigger.h  YATimerTrigger.m  YATrigger.h  YATrigger.m
(+322 files in other folders)
